# Rusted_FT_Winograd

./: API_USER_MANUAL.md  How_Winograd_depends_on_Cooley_and_Tukey.md
ft_winograd/: Cargo.toml  PLAN.md  PLAN_4_WINOGRAD_REVISED.md  PLAN_review_Gemini3_1.md  Plan_for_Fixing_Cargo_Warnings_in_ft_.md
ft_winograd/src/: bluestein.rs  error.rs  factorization.rs  fft_arbitrary.rs  index_map.rs  lib.rs  main.rs  plan.rs  rader.rs  winograd_conv.rs  winograd_dft.rs
