[package]
name = "ft_winograd"
version = "0.1.0"
edition = "2021"
description = "Winograd Fourier Transform: arbitrary-length DFT in Rust, extending fft_rs with WFTA, Rader, Bluestein, and PFA algorithms"
license = "MIT"
repository = "https://github.com/misureaudio/Rusted_FT_Winograd"
documentation = "https://github.com/misureaudio/Rusted_FT_Winograd"
keywords = ["fft", "dft", "winograd", "signal-processing", "transforms"]
categories = ["mathematics"]

[lib]
name = "ft_winograd"
path = "src/lib.rs"

[[bin]]
name = "ft_winograd"
path = "src/main.rs"

[dependencies]
fft_rs_ma = { package = "fft_rs-ma", version = "0.1.1", path = "../fft_rs_1" }
